--- a/docs/content/references/cli/move.mdx
+++ b/docs/content/references/cli/move.mdx
@@ -139,7 +139,7 @@ Module 0000000000000000000000000000000000000000000000000000000000000000::example
 
 ## Help
 
-Each command has its own help section. For example `iota move build -help` displays the following prompt:
+Each command has its own help section. For example `iota move build --help` displays the following prompt:
 
 ```shell
 $ iota move build --help
