fix(devx): rebase, fix conflicts, fix tags, fix imports

--- a/docs/content/developer/getting-started/build-test.mdx
+++ b/docs/content/developer/getting-started/build-test.mdx
@@ -1,6 +1,6 @@
 ---
 description: Learn how to build and test Move packages in IOTA with detailed instructions and examples.
-tags: [Move, IOTA, Package Building, Package Testing, Unit Testing, Debugging]
+tags: [move, testing, how-to, cli]
 ---
 
 import TestingCheatSheet from "../../_snippets/testing-cheat-sheet.mdx";
