--- a/docs/content/developer/getting-started/create-a-module.mdx
+++ b/docs/content/developer/getting-started/create-a-module.mdx
@@ -1,6 +1,6 @@
 ---
 description: Guide to creating and understanding a Move module in an IOTA package.
-tags: [IOTA, Move, module, smart contract, development]
+tags: [move,  getting-started]
 ---
 
 # Create a Move Module
