--- a/docs/content/developer/getting-started/debug.mdx
+++ b/docs/content/developer/getting-started/debug.mdx
@@ -1,6 +1,6 @@
 ---
 description: Learn how to use the std::debug module in Move for debugging and printing values.
-tags: [Move, debugging, std::debug, smart contracts]
+tags: [move, getting-started, testing]
 ---
 # Debugging
 
