--- a/docs/content/developer/getting-started/publish.mdx
+++ b/docs/content/developer/getting-started/publish.mdx
@@ -1,6 +1,6 @@
 ---
 description: Learn how to publish your Move package on the IOTA network and interact with it using programmable transaction blocks.
-tags: [Move, Package Publishing,  Programmable Transactions]
+tags: [move, how-to, cli]
 ---
 
 import AddressPrefix from "../../_snippets/address-prefix.mdx";
