--- a/docs/content/developer/getting-started/create-a-package.mdx
+++ b/docs/content/developer/getting-started/create-a-package.mdx
@@ -1,6 +1,6 @@
 ---
 description: How to create a Move package in IOTA
-tags: [ Move, Package Creation, .toml, manifest ]
+tags: [ move, getting-started ]
 ---
 
 # Create a Move Package
