--- a/docs/content/operator/validator-config.mdx
+++ b/docs/content/operator/validator-config.mdx
@@ -53,21 +53,10 @@ Each epoch change emits a `0x2::validator_set::ValidatorEpochInfo` event per val
 
 ## Staking rewards 
 
-Within a given validator staking pool, all stakers receive the same proportion of rewards through the pool's exchange rate appreciation. In addition, since validators earn commissions over the stake they manage, validators receive additional `StakedIOTA` objects at the end of each epoch in proportion to the amount of commissions their staking pool earns.
+Each epoch, within a given validator staking pool, all stakers are assigned the same proportion of rewards through the pool's exchange rate appreciation. 
+In addition, since validators earn commissions over the stake they manage, validators receive additional `StakedIOTA` objects at the end of each epoch in proportion to the amount of commissions their staking pool earns.
 
-Staking rewards are funded by transaction gas fees collected during the current epoch and by stake subsidies released at the end of the epoch.
-
-StakeRewards = StakeSubsidies + GasFees
-
-Stake subsidies are intended to subsidize the network during its early phases and are funded by a 10% allocation of IOTA tokens. After this allocation depletes, the entirety of stake rewards will be made up of gas fees collected through regular network operations.
-
-Stake rewards are made up of gas fees and stake subsidies. The total amount distributed throughout each epoch is determined as follows:
-
-- **Stake Subsidies:** The amount distributed in each epoch is determined prior to the beginning of the epoch according to a predefined schedule.
-- **Gas Fees:** Each epoch's amount depends on the total gas fees collected throughout the epoch. Each IOTA transaction pays gas fees depending on two variables, the amount of executed gas units and the gas price:
-_GasFee = GasPrice _ GasUnits*
-
-The total amount of gas fees collected corresponds to the sum of gas fees across all transactions processed in the epoch. During regular market conditions, the vast majority of transactions should have a `GasPrice` equal to the `ReferenceGasPrice`.
+Staking rewards are funded by stake subsidies released at the end of the epoch. The total stake subsidy per epoch is 767k IOTA, which is distributed among pools according to their voting power and the tallying rule.
 
 ### User staking and rewards 
 
