fix(docs/content): improvements of docs navigation by adding links (#1774)
* fix(docs/content): improvements of docs navigation by adding links

* fix(docs/content): add additional links, readable improvements.

* fix(docs/content/../claiming): simplify navigation with additional links for OTW, Bag, Coin, Unlock Condition

--- a/docs/content/developer/stardust/claiming/address-unlock-condition.mdx
+++ b/docs/content/developer/stardust/claiming/address-unlock-condition.mdx
@@ -2,7 +2,7 @@
  title: Claiming an Output unlockable by an Alias/Nft Address
 ---
 
-In Stardust outputs presented an Address Unlock Condition or similarly, in the case of the Alias Output, a Governor Address Unlock Condition. In the new ledger, this mechanism is represented as an address owning the associated Output object. Most of the times the address is directly managed through a keypair by a user, but sometimes this address could represent another object. In this case, that object owns the interested Output object. Coming from the Stardust migration, only `Alias` and `Nft` objects can own other Output objects.       
+In Stardust outputs presented an Address Unlock Condition or similarly, in the case of the Alias Output, a [Governor Address Unlock Condition](https://github.com/iotaledger/tips/blob/main/tips/TIP-0018/tip-0018.md#governor-address-unlock-condition). In the new ledger, this mechanism is represented as an address owning the associated Output object. Most of the times the address is directly managed through a keypair by a user, but sometimes this address could represent another object. In this case, that object owns the interested Output object. Coming from the [Stardust migration](../migration-process.mdx#stardust-migration), only `Alias` and `Nft` objects can own other Output objects.       
 
 ## Claim of an Output owned by another Alias/Nft object
 
