--- a/docs/content/developer/stardust/claiming/foundry.mdx
+++ b/docs/content/developer/stardust/claiming/foundry.mdx
@@ -2,7 +2,7 @@
  title: Claiming Foundry Outputs
 ---
 
-As seen in the [Move Models](../move-models) page, the Foundry Output does not have a direct representation in Move. So claiming a Foundry Output actually means claiming a `CoinManagerTreasuryCap` extracted from the `AliasOutput` originally controlling the Foundry in Stardust. This capability can be used to manage the supply of the `Coin` created during the migration to represent the native token controlled by the Foundry.
+As seen in the [Move Models](../move-models) page, the Foundry Output does not have a direct representation in Move. So claiming a Foundry Output actually means claiming a [`CoinManagerTreasuryCap`](../../../references/framework/iota-framework/coin_manager.mdx#resource-coinmanagertreasurycap) extracted from the [`AliasOutput`](../../../references/framework/stardust/alias_output#resource-aliasoutput) originally controlling the Foundry in Stardust. This capability can be used to manage the supply of the [`Coin`](../../../references/framework/iota-framework/coin.mdx#resource-coin) created during the migration to represent the native token controlled by the Foundry.
   
 ## Claim of a Foundry Output
 
@@ -49,7 +49,7 @@ As seen in the [Move Models](../move-models) page, the Foundry Output does not h
 </TabItem>
 </Tabs>
 
-4. Since each native token has its own package, a Foundry's native token as a dedicated `OTW`. Here we need to extract this `OTW` from the `CoinManagerTreasuryCap` object.
+4. Since each native token has its own package, a Foundry's native token as a dedicated [`OTW`](../../iota-101/iota-move-concepts/one-time-witness.mdx). Here we need to extract this `OTW` from the `CoinManagerTreasuryCap` object.
 
 <Tabs>
 <TabItem value="rs" label="Rust">
