--- a/docs/content/developer/stardust/claiming/nft.mdx
+++ b/docs/content/developer/stardust/claiming/nft.mdx
@@ -71,7 +71,7 @@ The following is an example of a simple module for representing a custom NFT, mi
 </Tabs>
 
 
-1. Create a PTB that extracts the Stardust `Nft` from an `NftOutput` and then converts it into a custom NFT of the collection just published. 
+Create a PTB that extracts the Stardust `Nft` from an `NftOutput` and then converts it into a custom NFT of the collection just published. 
 This conversion method extracts the Stardust `Nft` metadata and uses it for minting a new NFT.
 
 <Tabs>
