--- a/docs/content/operator/node-tools.mdx
+++ b/docs/content/operator/node-tools.mdx
@@ -106,7 +106,7 @@ $ iota validator update-metadata --help
 
 #### Operation cap
 
-Operation Cap allows a validator to authorizer another account to perform certain actions on behalf of this validator. Read about [Operation Cap here](validator-tasks.mdx#operation-cap).
+Operation Cap allows a validator to authorizer another account to perform certain actions on behalf of this validator. Read about [Operation Cap here](validator-tasks/validator-tasks.mdx#operation-cap).
 
 The Operation Cap holder (either the valdiator itself or the delegatee) updates its Gas Price and reports validator peers with the Operation Cap.
 
@@ -156,7 +156,7 @@ $ iota validator make-validator-info <name> <description> <image-url> <project-u
 ```
 
 This will generate a `validator.info` file and key pair files. The output of this command includes:
-  1. Four key pair files (Read [more here](validator-tasks.mdx#key-management)). ==Set their permissions with the minimal visibility (chmod 600, for example) and store them securely==. They are needed when running the validator node as covered below.
+  1. Four key pair files (Read [more here](validator-tasks/validator-tasks.mdx#key-management)). ==Set their permissions with the minimal visibility (chmod 600, for example) and store them securely==. They are needed when running the validator node as covered below.
     a. If you follow this guide thoroughly, this key pair is actually copied from your `iota.keystore` file.
   2. `validator.info` file that contains your validator info. **Double check all information is correct**.
 
