fix shell command

--- a/docs/content/developer/cryptography/how-to/signing.mdx
+++ b/docs/content/developer/cryptography/how-to/signing.mdx
@@ -22,7 +22,7 @@ Signature schemes covered:
 ### Set up fastcrypto CLI binary
 
 ```shell
-git@github.com:MystenLabs/fastcrypto.git
+git clone git@github.com:MystenLabs/fastcrypto.git
 cd fastcrypto/
 cargo build --bin sigs-cli
 ```
