--- a/docs/content/about-iota/tokenomics/validators-staking.mdx
+++ b/docs/content/about-iota/tokenomics/validators-staking.mdx
@@ -16,7 +16,7 @@ The staking pool is implemented in a system-level smart contract ([staking_pool.
 At each epoch boundary, the system computes the staking rewards for each validator pool proportionally to the staked tokens in each pool. The staking rewards $rewards(i, E)$ for validator pool $i$ at epoch $E$ are computed as follows:
 
 $$
-rewards(i, E) = \frac{ stakedTokens(i, E)}{\sum_i (stakedTokens(i, E-1)) }\cdot totalRewards(E).
+rewards(i, E) = \frac{ stakedTokens(i, E)}{\sum_i (stakedTokens(i, E)) }\cdot totalRewards(E).
 $$
 
 $rewards(i, E)$ is then adjusted to consider potential slashed validators who have not met minimum quality requirements. Additionally, validators earn commissions on the staking pool's tokens. IOTA keeps track of the rewards accrued by both validators and delegators using a single global exchange rate table.
