fix(docs/content): add links to simplify docs navigation

--- a/docs/content/developer/iota-101/iota-move-concepts/patterns.mdx
+++ b/docs/content/developer/iota-101/iota-move-concepts/patterns.mdx
@@ -11,7 +11,7 @@ A capability is a pattern that allows authorizing actions with an object. See [C
 
 ## Witness and transferrable witness
 
-A witness is a type with `drop` that proves that its owner was present at the time of some privileged operation, for example having access to the one-time witness (OTW) for a module proves that the code is being run at the time the module was first published. See the following topics for details.
+A witness is a type with `drop` that proves that its owner was present at the time of some privileged operation, for example having access to the one-time witness ([OTW](../../iota-101/iota-move-concepts/one-time-witness.mdx)) for a module proves that the code is being run at the time the module was first published. See the following topics for details.
 
 - [Witness](./patterns/witness)
 - [Transferrable Witness](./patterns/transferrable-witness)
