--- a/docs/content/operator/node-tools.mdx
+++ b/docs/content/operator/node-tools.mdx
@@ -36,16 +36,16 @@ This tool only supports pending validators and active validators at the moment.
 
     1. If this is the first time running this program, it will ask you to provide an IOTA Fullnode Server URL and a meaningful environment alias. It will also generate a random key pair in `iota.keystore` and a config `client.yaml`. Swap in your validator account key if you already have one.
 
-    2. If you already set it up, simply make sure 
-      a. `rpc` is correct in `client.yaml`. 
-      b. `active_address` is correct in `client.yaml`.
-      b. `iota.keystore` contains your account key pair.
+    2. If you already set it up, simply make sure  
+        a. `rpc` is correct in `client.yaml`.  
+        b. `active_address` is correct in `client.yaml`.  
+        c. `iota.keystore` contains your account key pair.
 
-        If at this point you can't find where `client.yaml` or `iota.keystore` is or have other questions, read [IOTA Client CLI tutorial](/references/cli/client.mdx).
+          If at this point you can't find where `client.yaml` or `iota.keystore` is or have other questions, read the [IOTA Client CLI tutorial](/references/cli/client.mdx).
 
-        ``` bash
-        $ iota client
-        ```
+          ``` bash
+          $ iota client
+          ```
 
 4. To test you are connected to the network and configured your config correctly, run the following command to display your validator info.
 
@@ -71,7 +71,7 @@ or
 ``` bash
 $ iota validator display-metadata <validator-address>
 ```
-to print another validator's information.
+to print the metadata of a specific validator.
 
 #### Update validator metadata
 
@@ -106,7 +106,7 @@ $ iota validator update-metadata --help
 
 #### Operation cap
 
-Operation Cap allows a validator to authorizer another account to perform certain actions on behalf of this validator. Read about [Operation Cap here](validator-tasks/validator-tasks.mdx#operation-cap).
+Operation Cap allows a validator to authorize another account to perform certain actions on behalf of this validator. Read about [Operation Cap here](validator-tasks/validator-tasks.mdx#operation-cap).
 
 The Operation Cap holder (either the valdiator itself or the delegatee) updates its Gas Price and reports validator peers with the Operation Cap.
 
@@ -134,18 +134,13 @@ To report validators peers, run
 $ iota validator report-validator <reportee-address>
 ```
 
-Add `--undo-report false` if it intents to undo an existing report.
+Add `--undo-report false` if it intends to undo an existing report.
 
-Similarly, if the account is a delegatee, add `--operation-cap-id <operation-cap-id>` option to the command.
-
-if the account itself is a validator and holds the Operation Cap. Or 
+Similarly, if the account is a delegatee or is itself a validator and holds the Operation Cap, add the `--operation-cap-id <operation-cap-id>` option to the command.
 
 ```bash
 $ iota validator update-gas-price --operation-cap-id <operation-cap-id> <gas-price>
 ```
-
-if the account is a delegatee.
-
 
 #### Become a validator / join committee
 
@@ -156,9 +151,14 @@ $ iota validator make-validator-info <name> <description> <image-url> <project-u
 ```
 
 This will generate a `validator.info` file and key pair files. The output of this command includes:
-  1. Four key pair files (Read [more here](validator-tasks/validator-tasks.mdx#key-management)). ==Set their permissions with the minimal visibility (chmod 600, for example) and store them securely==. They are needed when running the validator node as covered below.
-    a. If you follow this guide thoroughly, this key pair is actually copied from your `iota.keystore` file.
+  1. Four key pair files (Read [more here](validator-tasks/validator-tasks.mdx#key-management)). They are needed when running the validator node as covered below. If you follow this guide thoroughly, this key pair is actually copied from your `iota.keystore` file.
   2. `validator.info` file that contains your validator info. **Double check all information is correct**.
+
+:::warning
+
+Set the permissions of the keypair files with the minimal visibility (`chmod 600`, for example) and store them securely.
+
+:::
 
 Then run 
 
@@ -172,7 +172,7 @@ At this point you are validator candidate and can start to accept self staking a
 
 **If you haven't, start a fullnode now to catch up with the network. When you officially join the committee but is not fully up-to-date, you cannot make meaningful contribution to the network and may be subject to peer reporting hence face the risk of reduced staking rewards for you and your delegators.**
 
-Once you collect enough staking amount, run
+Once you have collected enough stake, run
 
 ``` bash
 $ iota validator join-committee
@@ -183,17 +183,17 @@ to become a pending validator. A pending validator will become active and join t
 
 #### Leave committee
 
-To leave committee, run
+To leave the committee, run
 
 ``` bash
 $ iota validator leave-committee
 ```
 
-Then you will be removed from committee starting from next epoch.
+Then you will be removed from the committee starting from next epoch.
 
 ### Generate the payload to create PoP
 
-Serialize the payload that is used to generate Proof of Possession. This is allows the signer to take the payload offline for an Authority protocol BLS keypair to sign.
+Serialize the payload that is used to generate a Proof of Possession. This is allows the signer to take the payload offline for an Authority protocol BLS keypair to sign.
 
 ``` bash
 $ iota validator serialize-payload-pop --account-address $ACCOUNT_ADDRESS --protocol-public-key $BLS_PUBKEY
