--- a/docs/content/operator/telemetry/iota-telemetry.mdx
+++ b/docs/content/operator/telemetry/iota-telemetry.mdx
@@ -24,7 +24,7 @@ The library defines following constants:
 To organize the telemetry data that is to be sent:
 - `TelemetryEvent`: Represents a single event with a name and a set of parameters.
 - `TelemetryPayload`: Represents the payload to be sent, containing a client ID and a list of telemetry events.
-- `IpResponse: Represents` the structure of the IP lookup service response.
+- `IpResponse`: Represents the structure of the IP lookup service response.
 
 ## Sending the Event
 
