--- a/docs/content/references/cli/ptb.mdx
+++ b/docs/content/references/cli/ptb.mdx
@@ -19,7 +19,7 @@ Usage: iota client ptb [OPTIONS]
 Options:
       --assign <NAME> <VALUE>                                         Assign a value to a variable name to use later in the PTB.
       --gas-coin <ID>                                                 The object ID of the gas coin to use. If not specified, it will try to use the first gas coin that it finds that has at least the requested gas-budget balance.
-      --gas-budget <MICROS>                                           The gas budget for the transaction, in MICROS.
+      --gas-budget <NANOS>                                            The gas budget for the transaction, in NANOS.
       --make-move-vec <TYPE> <[VALUES]>                               Given n-values of the same type, it constructs a vector. For non objects or an empty vector, the type tag must be specified.
       --merge-coins <INTO_COIN> <[COIN OBJECTS]>                      Merge N coins into the provided coin.
       --move-call <PACKAGE::MODULE::FUNCTION> <TYPE> <FUNCTION_ARGS>  Make a Move call to a function.
