Apply suggestions from code review
Co-authored-by: salaheldinsoliman <49910731+salaheldinsoliman@users.noreply.github.com>

--- a/docs/content/about-iota/about-iota.mdx
+++ b/docs/content/about-iota/about-iota.mdx
@@ -54,7 +54,7 @@ The IOTA Devnet is used to develop new features. You can use this network to cod
 
 [Solidity](https://soliditylang.org/) is the programming language of choice for the EVM. It was created for this specific purpose.
 
-The main benefit of using EVM/Solidity is its sheer amount of resources from years of development. The [IOTA Smart Contracts](../developer/iota-evm/introduction.mdx) implementation is fully compatible with all of them. If you have experience developing other EVM-based chains, you will feel right at home. Any existing contracts you've written will need no changes to function on IOTA Smart Contracts.
+The main benefit of using EVM/Solidity is its sheer amount of resources from years of development. The [IOTA Smart Contracts](../developer/iota-evm/introduction.mdx) implementation is fully compatible with these resources, allowing you to leverage all existing EVM developer tools for developing on the IOTA EVM. Any contracts you've previously written can be deployed on IOTA Smart Contracts without modification.
 
 ### Networks
 
