--- a/docs/content/developer/getting-started/first-app/build-test.mdx
+++ b/docs/content/developer/getting-started/first-app/build-test.mdx
@@ -38,8 +38,8 @@ $ iota move test
 If you execute this command for the package created in [Write a Package](write-package.mdx), you see the following output. Unsurprisingly, the test result has an `OK` status because there are no tests written yet to fail.
 
 ```shell
-BUILDING Iota
-BUILDING MoveStdlib
+INCLUDING DEPENDENCY Iota
+INCLUDING DEPENDENCY MoveStdlib
 BUILDING my_first_package
 Running Move unit tests
 Test result: OK. Total tests: 0; passed: 0; failed: 0
@@ -49,24 +49,23 @@ To actually test your code, you need to add test functions. Start with adding a 
 
 ```move
 #[test]
-public fun test_sword_create() {
+public fun test_sword() {
+    // Create a dummy TxContext for testing.
+    let mut ctx = tx_context::dummy();
 
-    // Create a dummy TxContext for testing
-    let ctx = tx_context::dummy();
-
-    // Create a sword
+    // Create a sword.
     let sword = Sword {
         id: object::new(&mut ctx),
         magic: 42,
         strength: 7,
     };
 
-    // Check if accessor functions return correct values
+    // Check if accessor functions return correct values.
     assert!(magic(&sword) == 42 && strength(&sword) == 7, 1);
 }
 ```
 
-As the code shows, the unit test function (`test_sword_create()`) creates a dummy instance of the `TxContext` struct and assigns it to `ctx`. The function then creates a sword object using `ctx` to create a unique identifier and assigns `42` to the `magic` parameter and `7` to `strength`. Finally, the test calls the `magic` and `strength` accessor functions to verify that they return correct values.
+As the code shows, the unit test function (`test_sword()`) creates a dummy instance of the `TxContext` struct and assigns it to `ctx`. The function then creates a sword object using `ctx` to create a unique identifier and assigns `42` to the `magic` parameter and `7` to `strength`. Finally, the test calls the `magic` and `strength` accessor functions to verify that they return correct values.
 
 The function passes the dummy context, `ctx`, to the `object::new` function as a mutable reference argument (`&mut`), but passes `sword` to its accessor functions as a read-only reference argument, `&sword`.
 
@@ -80,21 +79,21 @@ After running the `test` command, however, you get a compilation error instead o
 
 ```shell
 error[E06001]: unused value without 'drop'
-   ┌─ ./sources/my_module.move:60:65
-   │
+   ┌─ sources/my_module.move:55:65
+   │  
  4 │       public struct Sword has key, store {
-   │              ----- To satisfy the constraint, the 'drop' ability would need to be added here
-   ·
-27 │           let sword = Sword {
+   │                     ----- To satisfy the constraint, the 'drop' ability would need to be added here
+   ·  
+48 │           let sword = Sword {
    │               ----- The local variable 'sword' still contains a value. The value does not have the 'drop' ability and must be consumed before the function returns
    │ ╭─────────────────────'
-28 │ │             id: object::new(&mut ctx),
-29 │ │             magic: 42,
-30 │ │             strength: 7,
-31 │ │         };
-   │ ╰─────────' The type 'MyFirstPackage::my_module::Sword' does not have the ability 'drop'
+49 │ │             id: object::new(&mut ctx),
+50 │ │             magic: 42,
+51 │ │             strength: 7,
+52 │ │         };
+   │ ╰─────────' The type 'my_first_package::my_module::Sword' does not have the ability 'drop'
    · │
-34 │           assert!(magic(&sword) == 42 && strength(&sword) == 7, 1);
+55 │           assert!(magic(&sword) == 42 && strength(&sword) == 7, 1);
    │                                                                   ^ Invalid return
 ```
 
@@ -107,7 +106,7 @@ One of the solutions (as suggested in the error message), is to add the `drop` a
 We now transfer ownership of the `sword` to a freshly created dummy address:
 
 ```move
-// Create a dummy address and transfer the sword
+// Create a dummy address and transfer the sword.
 let dummy_address = @0xCAFE;
 transfer::transfer(sword, dummy_address);
 ```
@@ -115,11 +114,11 @@ transfer::transfer(sword, dummy_address);
 Run the test command again. Now the output shows a single successful test has run:
 
 ```shell
-BUILDING MoveStdlib
-BUILDING Iota
+INCLUDING DEPENDENCY Iota
+INCLUDING DEPENDENCY MoveStdlib
 BUILDING my_first_package
 Running Move unit tests
-[ PASS    ] 0x0::my_module::test_sword_create
+[ PASS    ] 0x0::my_module::test_sword
 Test result: OK. Total tests: 1; passed: 1; failed: 0
 ```
 
@@ -156,24 +155,20 @@ An instance of the `Scenario` struct contains a per-address object pool emulatin
 Update your `my_module.move` file to include entry functions callable from IOTA that implement `sword` creation and transfer. With these in place, you can then add a multi-transaction test that uses the `test_scenario` module to test these new capabilities. Put these functions after the accessors (Part 5 in comments).
 
 ```move
-public fun sword_create(magic: u64, strength: u64, recipient: address, ctx: &mut TxContext) {
-
-    // create a sword
+public fun create_sword(magic: u64, strength: u64, recipient: address, ctx: &mut TxContext) {
+    // Create a sword.
     let sword = Sword {
         id: object::new(ctx),
         magic: magic,
         strength: strength,
     };
-    // transfer the sword
+    // Transfer the sword.
     transfer::transfer(sword, recipient);
-
 }
 
 public fun sword_transfer(sword: Sword, recipient: address, _ctx: &mut TxContext) {
-
-    // transfer the sword
+    // Transfer the sword.
     transfer::public_transfer(sword, recipient);
-    
 }
 ```
 
@@ -182,49 +177,49 @@ The code of the new functions uses struct creation and IOTA-internal modules (`T
 With the new entry functions included, add another test function to make sure they behave as expected.
 
 ```move
-    #[test]
-    fun test_sword_transactions() {
-        use iota::test_scenario;
+#[test]
+fun test_sword_transactions() {
+    use iota::test_scenario;
 
-        // create test addresses representing users
-        let admin = @0xBABE;
-        let initial_owner = @0xCAFE;
-        let final_owner = @0xFACE;
+    // Create test addresses representing users.
+    let admin = @0xBABE;
+    let initial_owner = @0xCAFE;
+    let final_owner = @0xFACE;
 
-        // first transaction to emulate module initialization
-        let mut scenario_val = test_scenario::begin(admin);
-        let scenario = &mut scenario_val;
-        {
-            init(test_scenario::ctx(scenario));
-        };
-        // second transaction executed by admin to create the sword
-        test_scenario::next_tx(scenario, admin);
-        {
-            // create the sword and transfer it to the initial owner
-            sword_create(42, 7, initial_owner, test_scenario::ctx(scenario));
-        };
-        // third transaction executed by the initial sword owner
-        test_scenario::next_tx(scenario, initial_owner);
-        {
-            // extract the sword owned by the initial owner
-            let sword = test_scenario::take_from_sender<Sword>(scenario);
-            // transfer the sword to the final owner
-            sword_transfer(sword, final_owner, test_scenario::ctx(scenario))
-        };
-        // fourth transaction executed by the final sword owner
-        test_scenario::next_tx(scenario, final_owner);
-        {
-            // extract the sword owned by the final owner
-            let sword = test_scenario::take_from_sender<Sword>(scenario);
-            // verify that the sword has expected properties
-            assert!(magic(&sword) == 42 && strength(&sword) == 7, 1);
-            // return the sword to the object pool
-            test_scenario::return_to_sender(scenario, sword)
-            // or uncomment the line below to destroy the sword instead
-            // test_utils::destroy(sword)
-        };
-        test_scenario::end(scenario_val);
-    }
+    // First transaction to emulate module initialization.
+    let mut scenario_val = test_scenario::begin(admin);
+    let scenario = &mut scenario_val;
+    {
+        init(test_scenario::ctx(scenario));
+    };
+    // Second transaction executed by admin to create a sword.
+    test_scenario::next_tx(scenario, admin);
+    {
+        // Create the sword and transfer it to the initial owner.
+        create_sword(42, 7, initial_owner, test_scenario::ctx(scenario));
+    };
+    // Third transaction executed by the initial sword owner.
+    test_scenario::next_tx(scenario, initial_owner);
+    {
+        // Extract the sword owned by the initial owner.
+        let sword = test_scenario::take_from_sender<Sword>(scenario);
+        // Transfer the sword to the final owner.
+        sword_transfer(sword, final_owner, test_scenario::ctx(scenario))
+    };
+    // Fourth transaction executed by the final sword owner.
+    test_scenario::next_tx(scenario, final_owner);
+    {
+        // Extract the sword owned by the final owner.
+        let sword = test_scenario::take_from_sender<Sword>(scenario);
+        // Verify that the sword has expected properties.
+        assert!(magic(&sword) == 42 && strength(&sword) == 7, 1);
+        // Return the sword to the object pool
+        test_scenario::return_to_sender(scenario, sword)
+        // or uncomment the line below to destroy the sword instead.
+        // test_utils::destroy(sword)
+    };
+    test_scenario::end(scenario_val);
+}
 ```
 
 There are some details of the new testing function to pay attention to. The first thing the code does is create some addresses that represent users participating in the testing scenario. The assumption is that there is one game administrator user and two regular users representing players. The test then creates a scenario by starting the first transaction on behalf of the administrator address.
@@ -245,11 +240,11 @@ In the pure Move testing function, the function transfers the `sword` object to 
 Run the test command again to see two successful tests for our module:
 
 ```shell
-BUILDING Iota
-BUILDING MoveStdlib
+INCLUDING DEPENDENCY Iota
+INCLUDING DEPENDENCY MoveStdlib
 BUILDING my_first_package
 Running Move unit tests
-[ PASS    ] 0x0::my_module::test_sword_create
+[ PASS    ] 0x0::my_module::test_sword
 [ PASS    ] 0x0::my_module::test_sword_transactions
 Test result: OK. Total tests: 2; passed: 2; failed: 0
 ```
@@ -276,36 +271,19 @@ While the `iota move` command does not support publishing explicitly, you can st
 The `init` function for the module in the running example creates a `Forge` object.
 
 ```move
-    /// Module initializer to be executed when this module is published
-    fun init(ctx: &mut TxContext) {
-        let admin = Forge {
-            id: object::new(ctx),
-            swords_created: 0,
-        };
+/// Module initializer to be executed when this module is published.
+fun init(ctx: &mut TxContext) {
+    let admin = Forge {
+        id: object::new(ctx),
+        swords_created: 0,
+    };
 
-        // transfer the forge object to the module/package publisher
-        transfer::transfer(admin, tx_context::sender(ctx));
-    }
+    // Transfer the forge object to the module/package publisher.
+    transfer::transfer(admin, tx_context::sender(ctx));
+}
 ```
 
-The tests you have so far call the `init` function, but the initializer function itself isn't tested to ensure it properly creates a `Forge` object. To test this functionality, add a `new_sword` function to take the forge as a parameter and to update the number of created swords at the end of the function. If this were an actual module, you'd replace the `create_sword` function with `new_sword`. To keep the existing tests from failing, however, the example uses both functions.
-
-```move
-    /// Constructor for creating swords
-    public fun new_sword(
-        forge: &mut Forge,
-        magic: u64,
-        strength: u64,
-        ctx: &mut TxContext,
-    ): Sword {
-        forge.swords_created = forge.swords_created + 1;
-        Sword {
-            id: object::new(ctx),
-            magic: magic,
-            strength: strength,
-        }
-    }
-```
+The tests you have so far call the `init` function, but the initializer function itself isn't tested to ensure it properly creates a `Forge` object.
 
 Now, create a function to test the module initialization:
 
@@ -316,27 +294,25 @@ Now, create a function to test the module initialization:
 
 #[test]
 public fun test_module_init() {
-    let ts = ts::begin(@0x0);
+    let mut ts = ts::begin(@0x0);
 
-    // first transaction to emulate module initialization.
+    // First transaction to emulate module initialization.
+    ts::next_tx(&mut ts, ADMIN);
     {
-        ts::next_tx(&mut ts, ADMIN);
         init(ts::ctx(&mut ts));
     };
 
-    // second transaction to check if the forge has been created
-    // and has initial value of zero swords created
+    // Second transaction to check if the forge has been created and has initial value of zero swords created.
+    ts::next_tx(&mut ts, ADMIN);
     {
-        ts::next_tx(&mut ts, ADMIN);
+        // Extract the Forge object.
+        let forge: Forge = ts::take_from_sender(&ts);
 
-        // extract the Forge object
-        let forge: Forge = ts::take_from_sender(&mut ts);
-
-        // verify number of created swords
+        // Verify number of created swords.
         assert!(swords_created(&forge) == 0, 1);
 
-        // return the Forge object to the object pool
-        ts::return_to_sender(&mut ts, forge);
+        // Return the Forge object to the object pool.
+        ts::return_to_sender(&ts, forge);
     };
 
     ts::end(ts);
@@ -344,6 +320,77 @@ public fun test_module_init() {
 ```
 
 As the new test function shows, the first transaction (explicitly) calls the initializer. The next transaction checks if the `Forge` object has been created and properly initialized.
+
+Add a `new_sword` function to take the forge as a parameter and to update the number of created swords at the end of the function. If this were an actual module, you'd replace the `create_sword` function with `new_sword`. To keep the existing tests from failing, however, the example uses both functions.
+
+```move
+/// Constructor for creating swords.
+public fun new_sword(forge: &mut Forge, magic: u64, strength: u64, ctx: &mut TxContext): Sword {
+    // Increment the `swords_created` counter.
+    forge.swords_created = forge.swords_created + 1;
+
+    // Create a sword.
+    Sword {
+        id: object::new(ctx),
+        magic: magic,
+        strength: strength,
+    }
+}
+```
+
+Once this function is added, we can use it in the `test_sword_transactions` test.
+
+```move
+#[test]
+fun test_sword_transactions() {
+    use iota::test_scenario;
+
+    // Create test addresses representing users.
+    let admin = @0xBABE;
+    let initial_owner = @0xCAFE;
+    let final_owner = @0xFACE;
+
+    // First transaction to emulate module initialization.
+    let mut scenario_val = test_scenario::begin(admin);
+    let scenario = &mut scenario_val;
+    {
+        init(test_scenario::ctx(scenario));
+    };
+    // Second transaction executed by admin to create a sword.
+    test_scenario::next_tx(scenario, admin);
+    {
+        let mut forge = test_scenario::take_from_sender<Forge>(scenario);
+
+        // Create the sword and transfer it to the initial owner.
+        let sword = new_sword(&mut forge, 42, 7, test_scenario::ctx(scenario));
+        transfer::public_transfer(sword, initial_owner);
+
+        // Return the forge to the sender.
+        test_scenario::return_to_sender(scenario, forge);
+    };
+    // Third transaction executed by the initial sword owner.
+    test_scenario::next_tx(scenario, initial_owner);
+    {
+        // Extract the sword owned by the initial owner.
+        let sword = test_scenario::take_from_sender<Sword>(scenario);
+        // Transfer the sword to the final owner.
+        sword_transfer(sword, final_owner, test_scenario::ctx(scenario))
+    };
+    // Fourth transaction executed by the final sword owner.
+    test_scenario::next_tx(scenario, final_owner);
+    {
+        // Extract the sword owned by the final owner.
+        let sword = test_scenario::take_from_sender<Sword>(scenario);
+        // Verify that the sword has expected properties.
+        assert!(magic(&sword) == 42 && strength(&sword) == 7, 1);
+        // Return the sword to the object pool
+        test_scenario::return_to_sender(scenario, sword)
+        // or uncomment the line below to destroy the sword instead.
+        // test_utils::destroy(sword)
+    };
+    test_scenario::end(scenario_val);
+}
+```
 
 You can refer to the source code for the package (with all the tests and functions properly adjusted) in the [first_package](https://github.com/iotaledger/iota/tree/develop/examples/move/first_package/sources/example.move) module in the `iota/examples` directory.
 
